Enhance Quarkus sample project
- Fix blocking and transactional annotations
- Add form url encoded UI elements to add booking and supply
