# demo/sample-quarkus/src/test/resources/openapi.yaml
@@ -20,6 +20,21 @@ paths:
             text/html:
               schema:
                 $ref: '#/components/schemas/TemplateInstance'
+    post:
+      tags:
+      - Food Market Resource
+      requestBody:
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/MultivaluedMapStringString'
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TemplateInstance'
   /api/bookings:
     get:
       tags:
@@ -241,6 +256,12 @@ components:
         displayVariant:
           type: string
         displayName:
+          type: string
+    MultivaluedMapStringString:
+      type: object
+      additionalProperties:
+        type: array
+        items:
           type: string
     Origin:
       type: object
